# json

./: .appveyor.yml  .azure-pipelines.yml  .drone.star  .gitignore  .gitmodules  .travis.yml  CHANGELOG.adoc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jamfile  README.adoc  README.md  bloat.dockerfile  build.jam
.drone/: boost-script.bat  boost-script.sh  build.bat  cmake-superproject-script.sh  codecov-script.sh  coverity-script.sh  drone.bat  drone.sh  intel-script.sh  linux-cxx-install.sh  standalone-script.sh  standalone-windows-script.bat  standalone-windows-script.sh  valgrind-script.sh  windows-msvc-install.bat  windows-msvc-install.sh
.drone/dockers/dronevs2017/: Dockerfile
.drone/dockers/dronevs2019/: Dockerfile
.github/actions/setup-packages/: action.yml
.github/workflows/: ci.yml  cmake-find-boost-install.yml  cmake-standalone.yml  cmake-with-boost-stage.yml  run_analyze-bloat.yml  run_fuzzer.yml
bench/: CMakeLists.txt  Jamfile  README.md  apache_builds.hpp  bench-conv.cpp  bench.cpp  bench.jam  boost-json-bench.jam  results.html  results.txt  samples.txt
bench/data/: array.json  citm_catalog_nws.json  integers-32.json  integers-64.json  random.json
bench/data/test/: arrays.json  boolean.json  null.json
build_dir/: CMakeCache.txt  DartConfiguration.tcl
cmake/: BoostJson.pc.in  Config.cmake.in  config.cmake.in  make_cmake_installer.cmake
cmake/toolchains/: common.cmake  msvc.cmake
doc/: Jamfile  bench.html  config.json  externals.hpp  htmldir.rb  javadoc.hpp  library-detail.adoc  reference.adoc.jinja2  reference.jinja  source.dox
doc/pages/: benchmarks.adoc  comparison.adoc  definitions.adoc  docinfo.html  examples.adoc  faq.adoc  main.adoc  quick_look.adoc  reference.adoc
doc/pages/allocators/: background.adoc  overview.adoc  storage_ptr.adoc  uses_allocator.adoc
doc/pages/conversion/: alloc.adoc  context.adoc  custom.adoc  direct.adoc  forward.adoc  guidelines.adoc  nothrow.adoc  overview.adoc
doc/pages/dom/: array.adoc  init_lists.adoc  nested_access.adoc  numbers.adoc  object.adoc  overview.adoc  string.adoc  value.adoc
doc/pages/io/: overview.adoc  parsing.adoc  serializing.adoc
doc/qbk/: 01_overview.qbk  02_00_usage.qbk  02_01_quick_look.qbk  02_02_values.qbk  02_03_strings.qbk  02_04_arrays.qbk  02_05_objects.qbk  02_06_numbers.qbk  02_07_allocators.qbk  02_08_parsing.qbk  02_09_serializing.qbk  02_10_conversion.qbk  02_10_init_lists.qbk  02_1_values.qbk  02_2_strings.qbk  02_3_arrays.qbk  02_4_objects.qbk  02_5_numbers.qbk  02_6_allocators.qbk  02_6_parsing.qbk  02_6_storage.qbk  02_7_parsing.qbk  02_7_serializing.qbk  02_8_exchange.qbk  02_8_serializing.qbk  02_9_conversion.qbk  02_9_exchange.qbk  02_quick_look.qbk  02_usage.qbk  03_00_usage.qbk  03_01_value.qbk  03_02_string.qbk  03_03_array.qbk  03_04_object.qbk  03_05_numbers.qbk  03_06_conversion.qbk  03_examples.qbk  03_string.qbk  04_00_allocators.qbk  04_02_storage_ptr.qbk  (+24 more)
doc/qbk/allocators/: background.qbk  storage_ptr.qbk
doc/qbk/conversion/: basics.qbk  context.qbk  direct.qbk  forward.qbk  guidelines.qbk  overview.qbk
doc/qbk/dom/: array.qbk  numbers.qbk  object.qbk  overview.qbk  string.qbk  value.qbk
doc/qbk/io/: parsing.qbk
doc/scripts/: draw-bench.js
doc/xsl/: class_detail.xsl  config.xsl  includes_foot.xsl
example/: CMakeLists.txt  Jamfile  allocator.cpp  canada.hpp  cbor.cpp  cbor_dom.cpp  cbor_stack.cpp  citm_catalog.hpp  endian.hpp  file.hpp  hash.cpp  if_contains.cpp  merge.cpp  parse_into.cpp  parse_into_canada.cpp  parse_into_citm_catalog.cpp  path.cpp  pretty.cpp  proxy.cpp  use_allocator.cpp  validate.cpp
fuzzing/: .gitignore  CMakeLists.txt  Jamfile  Readme.md  fuzz.sh  fuzz_basic_parser.cpp  fuzz_direct_parse.cpp  fuzz_parse.cpp  fuzz_parser.cpp
fuzzing/old_crashes/direct_parse/: array.json  tuple.json  valid_cxx14.json  valid_cxx17.json
gdb/: Jamfile  boost_json_printers.py  test_printers.py  use-printers.cpp
include/boost/: json.hpp  pilfer.hpp
include/boost/charconv/: chars_format.hpp  from_chars.hpp  limits.hpp  to_chars.hpp
include/boost/charconv/detail/: apply_sign.hpp  bit_layouts.hpp  compute_float32.hpp  compute_float64.hpp  compute_float80.hpp  config.hpp  dragonbox.hpp  dragonbox_common.hpp  floff.hpp  (+8 more)
include/boost/json/: allocator.hpp  array.hpp  array_view.hpp  assign_string.hpp  assign_vector.hpp  basic_parser.hpp  basic_parser_impl.hpp  block_storage.hpp  config.hpp  conversion.hpp  debug_printers.hpp  error.hpp  except.hpp  fixed_storage.hpp  fwd.hpp  ieee_decimal.hpp  iostreams.hpp  is_deallocate_trivial.hpp  iterator.hpp  json.natvis  kind.hpp  lib.hpp  memory_resource.hpp  monotonic_resource.hpp  null_resource.hpp  number.hpp  number_cast.hpp  object.hpp  object_view.hpp  parse.hpp  parse_file.hpp  parse_into.hpp  parse_options.hpp  parser.hpp  pilfer.hpp  pool.hpp  printers.hpp  result_for.hpp  serialize.hpp  serialize_options.hpp  (+22 more)
include/fast_float/: bigint.h  parse_number.h
meta/: explicit-failures-markup.xml  libraries.json
pretty_printers/: FindBoostPrettyPrinters.cmake  boost-pretty-printers.jam  generate-gdb-header.py  generate-gdb-test-runner.py
src/: boost_json_gdb_printers.py  src.cpp
test/: CMakeLists.txt  Jamfile  _detail_iterator.cpp  _detail_number.cpp  _detail_stack.cpp  allocator.cpp  array.cpp  array_view.cpp  assign_string.cpp  assign_vector.cpp  basic_parser.cpp  block_storage.cpp  checking_resource.hpp  conversion.cpp  doc_allocators.cpp  doc_background.cpp  doc_forward_conversion.cpp  doc_forward_conversion2.cpp  doc_parsing.cpp  doc_quick_look.cpp  doc_serializing.cpp  doc_storage_ptr.cpp  doc_types.hpp  doc_uses_allocator.cpp  doc_using_numbers.cpp  double.cpp  erase_at_pointer.cpp  error.cpp  except.cpp  fail_parser.hpp  fixed_storage.cpp  fwd.cpp  ieee_decimal.cpp  intrusive_macros.cpp  iostreams.cpp  iterator.cpp  json.cpp  kind.cpp  lib.cpp  limits.cpp  (+50 more)
test/cmake-subdir/: CMakeLists.txt  main.cpp
test/cmake_install_test/: main.cpp
test/ryu/: d2fixed_test.cpp  d2s_intrinsics_test.cpp  d2s_table_test.cpp  d2s_test.cpp  f2s_test.cpp  gtest.hpp
tools/: codecov.sh
(+158 files in other folders)
